# kyc

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEMO.md  LICENSE  README.md  justfile  pyproject.toml
.github/: copilot-instructions.md
src/: main.py  pipeline.py
src/chains/: configuration.py  llm_chain.py  prompts.py
src/chains/schemas/: kyc_schemas.py
tests/: test_schemas.py
